--- a/Public/Css/style.css
+++ b/Public/Css/style.css
@@ -647,10 +647,10 @@ a.logout{background:url("img/aicons.gif") 0px -133px no-repeat; padding-left:16p
 	background:url(../images/right.png) no-repeat left center;
 }
 .Validform_wrong{
-	color:red;
-	padding-left:20px;
+	color:#f00 !important;
+	/* padding-left:20px; */
 	white-space:nowrap;
-	background:url(../images/error.png) no-repeat left center;
+	/* background:url(../images/error.png) no-repeat left center; */
 }
 .Validform_loading{
 	padding-left:20px;
