--- a/Public/admin/css/frame.css
+++ b/Public/admin/css/frame.css
@@ -1,3 +1,50 @@
+.showmenu .left {
+    display: block;
+}
 
-body.showmenu .left{display:block;}body.hidemenu .left{display:none;}body.showmenu .right{left:240px;}body.hidemenu .right{left:0px;}.left{position:absolute;top:0px;width:240px;left:0px;bottom:0px;z-index:7;}.left{*height:100%;*top:0;*bottom:0;*border-top:0px solid #FFF;*border-bottom:0px solid #FFF;*z-index:1;}.menu{height:100%;}.menu iframe{height:100%;width:99.99%;z-index:20;}.right{position:absolute;right:0px;top:1px;bottom:0px;z-index:7;}.right{*height:100%;*top:0;*right:-20px;*bottom:0;*border-top:0px solid #FFF;*border-bottom:0px solid #FFF;*z-index:1;}.main{height:100%;}.main iframe{height:100%;width:99.99%;z-index:20;}
+.hidemenu .left {
+    display: none;
+}
 
+.showmenu .right {
+    left: 220px;
+}
+
+.hidemenu .right {
+    left: 0px;
+}
+
+.left {
+    position: absolute;
+    top: 0px;
+    width: 220px;
+    left: 0px;
+    bottom: 0px;
+    z-index: 7;
+}
+.menu {
+    height: 100%;
+}
+
+.menu iframe {
+    height: 100%;
+    width:100%;
+    z-index: 20;
+}
+
+.right {
+    position: absolute;
+    right: 0px;
+    top: 1px;
+    bottom: 0px;
+    z-index: 7;
+}
+.main {
+    height: 100%;
+}
+
+.main iframe {
+    height: 100%;
+    width: 100%;
+    z-index: 20;
+}
