--- a/Public/Css/style.css
+++ b/Public/Css/style.css
@@ -1,52 +1,7 @@
-/* basic */
-/* *{
-	margin: 0px;
-	padding: 0px;
-}
-
-body{
-	text-align: center;
-	font: 12px/150% 宋体,Verdana,Arial,sans-serif;
-}
-h1, h2, h3, h4, h5, h6{
-	font-size: 16px;
-	line-height: 150%;
-
-}
-
-img{
-	border: 0px;
-}
-
-div{
-	text-align: left;
-}
-
-hr{
-	height: 1px;
-	border: 1px solid #dddddd;
-	clear: both;
-	margin: 5px 0px;
-}
-
-ul{
-	list-style: none;
-	text-align: left;
-}
-
-li{
-	line-height: 150%;
-}
-
-dl{line-height: 150%;}
-
-a{text-decoration:none;color:#333333;}
-a:hover{color:#719e18;text-decoration:underline;} */
 
 /* table */
 table{
 	text-align: left; 
-	/* font: 12px/150% 宋体,Verdana,Arial,sans-serif; */
 }
 table.fix{
 	table-layout: fixed;
@@ -91,17 +46,14 @@ table.grid td{
 	line-height:30px;
 }
 table.grid td a{
-	/* float:left; */
+	
 	 line-height: 30px;; margin:0 10px;}
 
-table.hide, table.hide th, table.hide td{
-	/* border: 0; */
-}
+
 .odd,.even{
 	text-align:center;
 }
 /* table add-ons */
-
 .title{
 	background: #E7E7E7;
 	text-align: center;
@@ -149,7 +101,6 @@ table.hide, table.hide th, table.hide td{
 
 /* form */
 
-form{}
 
 input{vertical-align:middle;}
 
@@ -203,9 +154,6 @@ input{vertical-align:middle;}
 .filediv{margin-top:5px;}
 
 /* structure */
-
-
-
 #left{
 	float: left;
 	width: 230px;
@@ -222,10 +170,7 @@ input{vertical-align:middle;}
 	width: 482px;
 }
 
-/* #centerm{
-	float: left;
-	width: 719px;
-} */
+
 
 #centerl{
 	float: left;
@@ -235,13 +180,13 @@ input{vertical-align:middle;}
 #cleft{
 	float: left;
 	width: 475px;
-	_height: 0;
+
 }
 
 #cright{
 	float: right;
 	width: 475px;
-	_height: 0;
+
 }
 
 
@@ -252,49 +197,15 @@ input{vertical-align:middle;}
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	_height: 0;
+
 }
 
-/* .block{
-	border: 1px solid #E7E7E7;
-	margin-bottom: 5px;
-	_height: 0;
-}
-.blocktitle{
-	height: 30px; 
-	line-height: 30px; 
-	font-weight: bold;
-	font-size: 14px;
-	color: #333333; 
-	padding-left: 10px;
-	background: url("img/dynamic_bg.gif") repeat-x scroll left bottom transparent;
-	border-bottom: 1px solid #E7E7E7;
-}
-
-.blocktitle span {
-    background: url("img/ico.gif") no-repeat scroll left 10px transparent;
-    display: block;
-
-    padding-left: 15px;
-}
-
-.blockcontent{
-	padding: 3px;
-}
-
-.blocknote{
-	border-top: 1px solid #E7E7E7;
-	padding: 3px;
-	text-align: center;
-	background: #f5f5f5;
-	line-height: 150%;
-} */
 
 /* user-center */
 .user-centerLeft{
 	float:left;
 	width:240px;
-	/* height:500px; */
+	
 	background:#f1f1f1;
 }
 .userCenter-sort{
@@ -385,22 +296,16 @@ input{vertical-align:middle;}
 .c_subject a{font-weight:bold;color: #0B65A7;}
 .c_tag{line-height:150%;}
 .c_description{line-height:150%;}
-.c_note{}
-
 
 /* attention */
-
 .hottext, a.hottext{color: #FF451A;}
 .poptext, a.poptext{color: #FF451A;}
 .notetext, a.notetext{color: #888888;}
 .errortext, a.errortext{color: #ff0000;}
-
 a.btnlink, a.btnlink:visited{display:inline-block;vertical-align:middle;height:22px;line-height:22px;font-size:12px;padding:0px 10px;color:#000000;text-align:center;background: #E7E7E7;border:1px solid #dddddd;}
 a.btnlink:hover{color:#ff0000; text-decoration: none;}
 a.btnlinks, a.btnlinks:visited{display:inline-block;vertical-align:middle;height:18px;line-height:18px;font-size:12px;padding:0px 5px;color:#000000;text-align:center;background: #E7E7E7;border:1px solid #dddddd;}
 a.btnlinks:hover{color:#ff0000; text-decoration: none;}
-
-
 /* interface */
 
 .jieqiQuote, .jieqiCode, .jieqiNote{
@@ -499,11 +404,6 @@ a.btnlinks:hover{color:#ff0000; text-decoration: none;}
 	padding:20px 0px 30px;
 }
 .pagelink{
-	/* border: 1px solid #E7E7E7; */
-	/* float: right; */
-	/* background: #f7f7f7; */
-	/* line-height:24px; */
-	/* padding:0; */
 	display:inline-block;
 	line-height: 24px;
 }
@@ -522,8 +422,7 @@ a.btnlinks:hover{color:#ff0000; text-decoration: none;}
 .pagelink span:hover,.pagelink a:hover{
 	background:#5f8612; color:#fff;
 }
-/* .pagelink a:hover{background-color: #ffffff; } */
-/* .pagelink strong{font-weight: bold; color: #ff6600; background: #E7E7E7;} */
+
 .pagelink kbd{height:24px; border-left: 1px solid #dddddd;}
 .pagelink em{height:24px; border-right: 1px solid #dddddd; font-style:normal;}
 .pagelink input{border: 1px solid #dddddd; color: #0067B1; margin-top:1px; height: 18px;}
@@ -666,7 +565,7 @@ a.logout{background:url("img/aicons.gif") 0px -133px no-repeat; padding-left:16p
 .green, a.green{color: #69ab2f;}
 .gray, a.gray{color: #666;}
 
-/*==========以下部分是Validform必须的===========*/
+/*==========Validform===========*/
 .Validform_checktip{
 	margin-left:8px;
 	line-height:20px;
@@ -682,9 +581,9 @@ a.logout{background:url("img/aicons.gif") 0px -133px no-repeat; padding-left:16p
 }
 .Validform_wrong{
 	color:#f00 !important;
-	/* padding-left:20px; */
+	
 	white-space:nowrap;
-	/* background:url(../images/error.png) no-repeat left center; */
+	
 }
 .Validform_loading{
 	padding-left:20px;
@@ -711,3 +610,9 @@ a.logout{background:url("img/aicons.gif") 0px -133px no-repeat; padding-left:16p
 .admin_show{
 	margin-bottom:20px;
 }
+
+.user-right h2{height:40px; background:#E7E7E7; line-height: 40px;text-align: center; color:#0067B1; font-weight:bold;}
+.user-right form{padding:20px; }
+.user-right form p{line-height: 38px; border-bottom:1px dashed #E7E7E7}
+.user-right .button{margin-top:20px;}
+.user-right form span{line-height: 38px;}
